<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.quiz.ThreeActivity" >
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pergunta3"
        android:textSize="@dimen/title" />
    
    <RadioGroup
        android:id="@+id/rgresposta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
                
        <RadioButton
            android:id="@+id/p3op1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/p3op1" />
        
        <RadioButton
            android:id="@+id/p3op2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/p3op2" />
        
        <RadioButton
            android:id="@+id/p3op3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/p3op3" />

	</RadioGroup>
	
    <Button
	    android:id="@+id/btproxima"
        android:layout_width="320dp"
        android:layout_height="match_parent"
        android:text="@string/proxima" />
    
    <Button
	    android:id="@+id/btsair"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/sair" />

</LinearLayout>
